<?xml version="1.0"?>
<package format="2">
  <name>advantech_ros_comm</name>
  <version>0.0.1</version>
  <description>The advantech_ros_comm package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roboskel_msgs</depend>

</package>
